@@ -2,15 +2,21 @@ import org.jsoup.Jsoup
 import org.jsoup.nodes.Element
 import org.jsoup.select.Elements
 
+import java.nio.file.Files
+import java.nio.file.Paths
 import java.util.concurrent.atomic.AtomicBoolean
+import java.util.concurrent.atomic.AtomicInteger
+
+import static java.lang.Math.min
 
 buildscript {
     dependencies {
-        classpath 'org.jsoup:jsoup:1.14.3'
+        classpath libs.jsoup
     }
 }
 
 plugins {
+    id 'jvm-toolchains'
     alias libs.plugins.osdetector apply false
     alias libs.plugins.scalafmt apply false
     alias libs.plugins.nexus.publish
@@ -47,8 +53,9 @@ gradle.buildFinished({ result ->
 allprojects {
     // Add common JVM options such as max memory and leak detection.
     tasks.withType(JavaForkOptions) {
-        maxHeapSize = '512m'
-        if (rootProject.ext.testJavaVersion >= 9) {
+        maxHeapSize = '768m'
+
+        if (project.ext.testJavaVersion >= 9 || it.name == 'nativeImageTrace') {
             jvmArgs '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
         }
 
@@ -60,17 +67,36 @@ allprojects {
     }
 
     tasks.withType(Test) {
+        jvmArgumentProviders.add(new TestBuildDirArgumentsProvider(project.buildDir))
+
         // Do not omit stack frames for easier tracking.
         jvmArgs '-XX:-OmitStackTraceInFastThrow'
 
         // Drop heap dump and exit on OOME.
         jvmArgs '-XX:+ExitOnOutOfMemoryError'
         jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
-        jvmArgs "-XX:HeapDumpPath=${rootProject.buildDir}"
+
+        // `-Djava.security.manager` was added in Java 17 and the default value was changed to
+        // `disallow` in Java 18.
+        // - https://openjdk.org/jeps/411
+        // - https://bugs.openjdk.org/browse/JDK-8270380
+        if (project.ext.testJavaVersion >= 17 || it.name == 'nativeImageTrace') {
+            systemProperty "java.security.manager", "allow"
+        }
+
+        // required by blockhound for jvm 13+. See https://github.com/reactor/BlockHound/issues/33.
+        if (rootProject.hasProperty('blockhound') && project.ext.testJavaVersion >= 13) {
+            jvmArgs "-XX:+AllowRedefinitionToAddDeleteMethods"
+        }
 
         // Use verbose exception/response reporting for easier debugging.
         systemProperty 'com.linecorp.armeria.verboseExceptions', 'true'
         systemProperty 'com.linecorp.armeria.verboseResponses', 'true'
+
+        // Allow choosing the transport type by specifying `-PtransportType=<nio|epoll|io_uring|kqueue>`.
+        if (rootProject.hasProperty('transportType')) {
+            systemProperty('com.linecorp.armeria.transportType', "${rootProject.findProperty("transportType")}")
+        }
 
         // Pass special system property to tell our tests that we are measuring coverage.
         if (project.hasFlags('coverage')) {
@@ -91,6 +117,42 @@ allprojects {
                 }
             })
         }
+
+        retry {
+            if (rootProject.findProperty('retry') == 'true') {
+                maxRetries = 3
+                failOnPassedAfterRetry = rootProject.findProperty('failOnPassedAfterRetry') != 'false'
+            }
+        }
+    }
+}
+
+/**
+ * An argument provider which avoids task input inconsistency when builds are run
+ * from different locations. By handling this, we can take advantage of build caches
+ * when run from different locations. (i.e. remote build caches)
+ */
+class TestBuildDirArgumentsProvider implements CommandLineArgumentProvider {
+
+    TestBuildDirArgumentsProvider(File buildDir) {
+        this.heapDumpPath = buildDir.toPath().resolve("dump")
+        this.blockhoundReportPath = buildDir.toPath().resolve("blockhound.log")
+        // create the heap dump path in advance
+        heapDumpPath.toFile().mkdirs()
+    }
+
+    @LocalState
+    def heapDumpPath
+
+    @LocalState
+    def blockhoundReportPath
+
+    @Override
+    Iterable<String> asArguments() {
+        [
+                "-Dcom.linecorp.armeria.blockhound.reportFile=${blockhoundReportPath}",
+                "-XX:HeapDumpPath=${heapDumpPath}",
+        ]
     }
 }
 
@@ -148,12 +210,15 @@ configure(projectsWithFlags('java')) {
         // Logging
         implementation libs.slf4j.api
         testImplementation libs.slf4j.jul.to.slf4j
-        testImplementation libs.logback
+        testImplementation libs.logback12
         testRuntimeOnly libs.slf4j.jcl.over.slf4j
         testRuntimeOnly libs.slf4j.log4j.over.slf4j
 
         // Reflections
         implementation libs.reflections
+
+        // Blockhound
+        optionalImplementation libs.blockhound
 
         // Test-time dependencies
         testImplementation libs.guava.testlib
@@ -170,23 +235,13 @@ configure(projectsWithFlags('java')) {
         testRuntimeOnly libs.checkerframework // Required by guava-testlib
         testImplementation libs.assertj
         testImplementation libs.mockito
-        testImplementation libs.apache.httpclient
+        testImplementation libs.apache.httpclient5
         testImplementation libs.hamcrest
         testImplementation libs.hamcrest.library
-    }
+        testRuntimeOnly libs.kotlin.coroutines.debug
 
-    tasks.withType(JavaCompile) { task ->
-        if (task.path.startsWith(':examples:')) {
-            // Target Java 11 for examples.
-            options.release.set(11)
-            // IntelliJ fails to compile example projects with IntelliJ compiler because of a wrong target
-            // bytecode version which is marked as Java 8 without the following options.
-            // See https://github.com/line/armeria/pull/3712
-            sourceCompatibility = '11'
-            targetCompatibility = '11'
-        } else {
-            // Target Java 8 for the rest of them.
-            options.release.set(8)
+        if (rootProject.hasProperty('blockhound')) {
+            testRuntimeOnly libs.blockhound.junit.platform
         }
     }
 
@@ -201,13 +256,6 @@ configure(projectsWithFlags('java')) {
 }
 
 allprojects {
-
-    tasks.all { task ->
-        // Disables all tasks in examples when we use a JDK version under 11.
-        if (rootProject.ext.testJavaVersion < 11 && task.path.startsWith(':examples:')) {
-            task.enabled = false
-        }
-    }
 
     // Configure the Javadoc tasks of all projects.
     tasks.withType(Javadoc) {
@@ -226,14 +274,14 @@ allprojects {
     }
 }
 
-// Require to use JDK 17 when releasing.
+// Require to use JDK 19 when releasing.
 tasks.closeAndReleaseStagingRepository.doFirst {
-    if (JavaVersion.current() != JavaVersion.VERSION_17) {
-        throw new IllegalStateException("You must release using JDK 17.");
+    if (JavaVersion.current() != JavaVersion.VERSION_19) {
+        throw new IllegalStateException("You must release using JDK 19.");
     }
 }
 
-task reportFailedTests(type: TestsReportTask)
+tasks.register("reportFailedTests", TestsReportTask)
 
 /**
  * Summarizes the failed tests and reports as a file with the Markdown syntax.
@@ -287,7 +335,8 @@ class TestsReportTask extends DefaultTask {
                 // Create an link to directly create an issue from the error message
                 String ghIssueTitle = URLEncoder.encode("Test failure: `$method`", "UTF-8")
                 // 8k is the maximum allowed URL length for GitHub
-                String ghIssueBody = URLEncoder.encode("```\n${detail.substring(0, 6000)}\n```\n", "UTF-8")
+                String ghIssueBody = URLEncoder.encode(
+                        "```\n${detail.substring(0, min(6000, detail.length()))}\n```\n", "UTF-8")
                 String ghIssueLink =
                         "https://github.com/line/armeria/issues/new?title=$ghIssueTitle&body=$ghIssueBody"
                 String ghSearchQuery = URLEncoder.encode("is:issue $method", "UTF-8")
@@ -306,6 +355,104 @@ class TestsReportTask extends DefaultTask {
                     lines.each { line -> writer.println("  $line") }
                     writer.println("  </pre></details>\n")
                 }
+            }
+        }
+    }
+}
+
+def graalLauncher = javaToolchains.launcherFor {
+    languageVersion.set(JavaLanguageVersion.of(17))
+    vendor.set(JvmVendorSpec.GRAAL_VM)
+}.get()
+rootProject.ext.graalLauncher = graalLauncher
+
+def graalHome = graalLauncher.executablePath.asFile.toPath().parent.parent
+rootProject.ext.graalHome = graalHome
+
+tasks.register("installGraalNativeImage", Exec) {
+    onlyIf {
+        !Files.exists(graalHome.resolve("lib/svm/bin/native-image")) ||
+        !Files.exists(graalHome.resolve("lib/svm/bin/native-image-configure")) ||
+        !Files.exists(graalHome.resolve("lib/svm/bin/rebuild-images"))
+    }
+    commandLine(graalHome.resolve("lib/installer/bin/gu"), "install", "native-image")
+}
+
+def relocatedProjects = projectsWithFlags('java', 'relocate')
+def projectsWithNativeImageSupport = projectsWithFlags('java', 'relocate', 'native')
+def numConfiguredRelocatedProjects = new AtomicInteger()
+configure(relocatedProjects) {
+    if (projectsWithNativeImageSupport.contains(project)) {
+        def shadedTestTask = tasks.getByName('shadedTest') as Test
+        def copyShadedTestClassesTask = tasks.getByName('copyShadedTestClasses') as Copy
+        def nativeImageTraceFile =
+                "$rootDir/native-image-config/gen-src/traces/${project.path.replace(':', '-').substring(1)}.json"
+        project.ext.nativeImageTraceFile = Paths.get(nativeImageTraceFile)
+
+        tasks.register("nativeImageTrace", Test).configure {
+            group = "Build"
+            description = "Generates native-image trace for ${project.name} by running shaded tests."
+
+            dependsOn(rootProject.tasks.named('installGraalNativeImage'))
+            dependsOn(copyShadedTestClassesTask)
+            outputs.file(nativeImageTraceFile)
+
+            useJUnitPlatform {
+                includeTags('NATIVE_IMAGE_TRACE')
+            }
+
+            javaLauncher.set(graalLauncher)
+            maxParallelForks = 1
+
+            // Remove 'jetty-alpn-agent' and add 'native-image-agent'.
+            jvmArgs = jvmArgs.stream().filter {
+                !(it.startsWith('-javaagent:') && it.endsWith('jetty-alpn-agent.jar'))
+            }.collect() + [
+                    "-agentlib:native-image-agent=trace-output=$nativeImageTraceFile"
+            ]
+
+            testClassesDirs = files(copyShadedTestClassesTask.destinationDir)
+            classpath = testClassesDirs
+            setExcludes(shadedTestTask.excludes)
+            exclude("META-INF/versions/**") // Seems unsupported by GraalVM
+        }
+    }
+
+    afterEvaluate {
+        if (numConfiguredRelocatedProjects.incrementAndGet() == relocatedProjects.size()) {
+            relocatedProjects.each { p ->
+                if (projectsWithNativeImageSupport.contains(p)) {
+                    p.tasks.getByName('nativeImageTrace').configure {
+                        classpath += p.files(p.configurations.getByName('shadedJarTestRuntime').resolve())
+                    }
+                }
+            }
+        }
+    }
+}
+
+// additional configuration that can't be done at settings.gradle
+gradleEnterprise {
+    buildScan {
+        // maintain a allowList so that sensitive information (credentials) aren't accidentally published.
+        Set<String> allowList = ['coverage', 'leak', 'blockhound', 'noLint', 'flakyTests', 'buildJdkVersion',
+                                 'testJavaVersion', 'minimumJavaVersion', 'retry', 'noWeb']
+        def self = owner
+        allowList.each { property ->
+            def provider = rootProject.providers.gradleProperty(property)
+            if (provider.isPresent()) {
+                self.value(property, provider.getOrElse(""))
+            }
+        }
+    }
+}
+
+allprojects {
+    normalization {
+        runtimeClasspath {
+            metaInf {
+                ignoreAttribute("Ant-Version")
+                ignoreAttribute("Created-By")
             }
         }
     }
